--- a/README.adoc
+++ b/README.adoc
@@ -3,3 +3,24 @@
 This repository accompanies the link:graphacademy.neo4j.com/courses/genai-workshop[Neo4j Gen-AI - Hands-on Workshop^] on link:graphacademy.neo4j.com/courses/genai-workshop[GraphAcademy^].
 
 For a complete walkthrough of this repository, link:graphacademy.neo4j.com/courses/genai-workshop[enrol now^].
+
+# Test
+
+To run the solution tests: 
+
+. Create Neo4j instance with the `recommendations` dataset
+. Run the link:https://raw.githubusercontent.com/neo4j-graphacademy/courses/refs/heads/main/asciidoc/courses/genai-workshop/modules/2-llm-rag-python-langchain/lessons/7-retrievers/reset.cypher[Cypher to add embeddings and create the vector index^].
+. Create a virtual environment and install the requirements.
++ 
+[source,sh]
+pip install -r requirements.txt
+. Install `pytest`
++
+[source,sh]
+pip install pytest
+. Create a `.env` file in the root directory. Use `.env.example` as a template.
+. Run the tests
++
+[source,sh]
+pytest 1-knowledge-graph-vectors/solutions
+pytest 2-llm-rag-python-langchain/solutions
