--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ This repository accompanies the link:graphacademy.neo4j.com/courses/genai-worksh
 
 For a complete walkthrough of this repository, link:graphacademy.neo4j.com/courses/genai-workshop[enrol now^].
 
-# Test
+== Test
 
 To run the solution tests: 
 
@@ -22,5 +22,5 @@ pip install pytest
 . Run the tests
 +
 [source,sh]
-pytest 1-knowledge-graph-vectors/solutions
+pytest 1-knowledge-graphs-vectors/solutions
 pytest 2-llm-rag-python-langchain/solutions
